# mlsnitch

./: .actrc  .gitignore  Cargo.toml  LICENSE  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: devnet-integration.yml  docker-ci.yml  python-code-check.yml  rust-code-check.yml  rust-release.yml
api-gateway/: Cargo.toml  README.md
api-gateway/src/: config.rs  main.rs  state.rs
api-gateway/src/routes/: health.rs  mod.rs  models.rs
chain/: Cargo.toml  README.md
chain/src/: config.rs  lib.rs  main.rs
chain/src/consensus/: config.rs  engine.rs  error.rs  fork_choice.rs  mod.rs  proposer.rs  store.rs  validator.rs
chain/src/metrics/: mod.rs  prometheus.rs
chain/src/ml_client/: http.rs  mod.rs
chain/src/storage/: mem.rs  mod.rs  rocksdb.rs
chain/src/types/: artefact.rs  block.rs  mod.rs  tx.rs
chain/src/validation/: base.rs  ml.rs  mod.rs
configs/: api.toml  devnet.toml  ml-service.toml  prometheus.yml
deploy/: docker-compose.yml
deploy/docker/: Dockerfile.api-gateway  Dockerfile.chain  Dockerfile.ml-service
docs/: CONTRIBUTING.md  SECURITY.md
expts/: demo.py  demo.sh
ml_service/: README.md  environment.yml  pyproject.toml
ml_service/src/: __init__.py  config.py  main.py  schemas.py
ml_service/src/models/: __init__.py  resnet.py
ml_service/src/registry/: __init__.py  filesystem_store.py
ml_service/src/watermark/: __init__.py  verify.py
ml_service/tests/: __init__.py  test_app.py  test_schemas.py  test_watermark_verify.py
