[workspace]
members = [
    "chain",
    "api-gateway",
]
resolver = "2"

# Shared package metadata for workspace members
[workspace.package]
version = "0.1.0"
authors = [
    "Keys <70819367+keys-i@users.noreply.github.com>",
    "Amish Priyadarshi",
    "Rishab Ghai",
    "Harshit Rana",
    "Aryan Rajvanshi",
]
edition = "2024"
description = "Experimental proof-of-stake blockchain node that integrates multi-factor ML watermark verification into the block validity predicate to enforce consensus-level authenticity of models."
readme = "README.md"
license-file = "LICENSE"
keywords = [
    "blockchain",
    "consensus",
    "machine-learning",
    "watermarking",
    "verification",
]
categories = [
    "cryptography::cryptocurrencies",
    "network-programming",
    "simulation",
]

# shared deps, we can add:
[workspace.dependencies]
hex = "0.4.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "time", "sync"] }

# Faster compile times, still with good debug info
[profile.dev]
opt-level = 1
debug = true
debug-assertions = true
overflow-checks = true
incremental = true
lto = "off"
codegen-units = 16

# For experiments / benchmarks on consensus + ML verification
[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
incremental = false
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"
