[package]
name = "api-gateway"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Rust HTTP API that lets clients register and query watermarked ML models on the consensus-level authenticity prototype chain."
readme = "README.md"
license-file.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
axum = { version = "0.8.7", features = ["macros", "json"] }
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
