[package]
name = "chain"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Experimental proof-of-stake blockchain node that integrates multi-factor ML watermark verification into the block validity predicate to enforce consensus-level authenticity of models."
readme = "README.md"
license-file.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
bincode = { version = "2.0.1", features = ["serde", "alloc"] }
blake3 = "1.8.2"
bytes = "1.11.0"
hex = "0.4.3"
http-body-util = "0.1.3"
hyper = { version = "1.8.1", features = ["full"] }
hyper-util = { version = "0.1.18", features = ["full"] }
once_cell = "1.21.3"
pqcrypto-mldsa = "0.1.2"
prometheus = "0.14.0"
reqwest = { version = "0.12.24", features = ["json", "blocking"] }
rocksdb = { version = "0.24.0", features = ["multi-threaded-cf"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
tempfile = "3.23.0"
